--- a/style.css
+++ b/style.css
@@ -569,7 +569,7 @@ footer .copyright{
 
 /* /* blog Page * */
 
-.blog-header{
+#page-header-1{
     background-image: url("images/banner/b19.jpg");
     width: 100%;
     height: 40vh;
@@ -581,6 +581,60 @@ footer .copyright{
     padding: 14px;
 }
   
+#blog{
+    padding: 150px 150px 0 150px;
+}
+
+#blog .blog-box{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 90px;
+}
+
+#blog .blog-img{
+    width: 50%;
+    margin-right: 40px;
+}
+
+#blog img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+#blog .blog-details{
+    width: 50%;
+}
+
+#blog .blog-details a{
+    text-decoration: none;
+    font-size: 11px;
+    color: #000;
+    font-weight: 700;
+    position: relative;
+    transition: 0.3s;
+}
+
+#blog .blog-details a::after{
+    content: "";
+    width: 50px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    right: -60px;
+}
+
+#blog .blog-details a:hover{
+    color: #087d81;
+}
+
+#blog .blog-details a:hover::after{
+    background-color: #087d81;
+
+}
+
 
 /* Single Product */
 
